# pygvent

./: README.md  pyproject.toml
broadway/: __init__.py  alignment.py  animation.py  display.py  font.py  game.py  loop.py  resolution.py
broadway/action/: __init__.py  abstract.py  chain.py  loop.py  parallel.py
broadway/actor/: __init__.py  abstract.py  label.py
broadway/engine/: abstract.py
broadway/geometry/: __init__.py  matrix.py  point.py  rectangle.py  transform.py  vector.py
broadway/picture/: __init__.py  abstract.py  text.py
broadway/structure/: node.py  scene.py
examples/asteroids/: __init__.py  asteroid.py  asteroids.py  background.py  game.py  player.py  projectile.py  score.py
examples/hello/: hello.py
pygvent/: __init__.py  alignment.py  animation.py  color.py  controls.py  display.py  engine.py  events.py  font.py  game.py  keyboard.py  loop.py  objects.py  structures.py  types.py  vector2d.py
pygvent/action/: abstract.py  chain.py  continuous.py  instant.py  loop.py  parallel.py
pygvent/actor/: abstract.py  label.py
pygvent/controls/: __init__.py  button.py  menu.py
pygvent/engine/: __init__.py  abstract.py
pygvent/geometry/: line.py  matrix.py  point.py  rectangle.py  transform.py  vector.py
pygvent/picture/: abstract.py  text.py
pygvent/structure/: node.py  scene.py
pygvent/utils/: __init__.py  iteration.py  profiling.py  reference.py  slots.py
tests/: fakes.py  mocks.py  test_events.py  test_keyboard.py  test_objects.py  test_structures.py  test_vector2d.py
tests/action/: test_chain.py  (+2 more)
utils/: image.py
(+61 files in other folders)
