[tool.poetry]
name = "pygvent"
version = "0.1.0"
description = "2D Game Development Library in Python"
authors = [
    "Vladislav Blinov",
]
repository = "https://github.com/chomechome/pygvent"

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
pyglet = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
